<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kr_pc.crickettracker.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorAccent">

                <Button
                    android:id="@+id/live_score_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:drawable/alert_dark_frame"
                    android:text="@string/live_score"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/player_profile_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:drawable/alert_dark_frame"
                    android:text="@string/player_profile"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/rankings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:drawable/alert_dark_frame"
                    android:text="@string/rankings"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorAccent">

                <Button
                    android:id="@+id/my_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:drawable/alert_dark_frame"
                    android:text="@string/my_profile"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
